<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_ament_cmake_google_benchmark</name>
  <version>1.0.0</version>
  <description>ament_cmake_google_benchmark example</description>
  <maintainer email="shuhei.aoki@fixstars.com">Shuhei Aoki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_google_benchmark</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

