<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_launch_pytest</name>
  <version>1.0.0</version>
  <description>launch_pytest example</description>
  <maintainer email="shuhei.aoki@fixstars.com">Shuhei Aoki</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>domain_coordinator</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
