<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_calc</name>
  <version>1.0.0</version>
  <description>C++ calculation package</description>
  <maintainer email="shuhei.aoki@fixstars.com">Shuhei Aoki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ament_cmake_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
